--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <app-home></app-home>
+<app-card></app-card>
+<app-form></app-form>
 <app-footer></app-footer>
-<app-test></app-test>
+
 
