--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,8 @@
-<p>form works!</p>
+
+<select class="form-select" multiple aria-label="multiple select example"id="encuesta">
+  <option selected>Encuesta: Seleccioná tu película de terror clásica  favorita!</option>
+  <option value="1">Halloween</option>
+  <option value="2">Martes 13</option>
+  <option value="3">Psicosis</option>
+</select>
+
