--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,6 @@
-<p>Copyright </p>
+<footer>
+  <div class="pieFooter">
+      <p id="leyendaFooter">© Copyright Willy S 2021- Todos los derechos reservados.</p>
+  </div>
+</footer>
 
