--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,12 +2,7 @@
 footer {
   margin: 0;
   text-align: center;
-  background-color: rgb(226, 6, 6);gi
-  text-align: center;
-  padding: 3mm;
+  background-color: rgb(226, 6, 6);
 }
 
-article, footer {
-  flex: 1;
-  margin: 0;
-}
+
