--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,12 @@
-h1{
-  color:red;
+.inicio {
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+h1 {
+  color: red;
   text-align: center;
   font-size: 10mm;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-.Inicio {
-  background-color: rgb(8, 8, 8);
 }
