--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,29 +1,26 @@
 <div class="Inicio">
 <h1>Bienvenidos al Video Club más terrorífico y paranormal de la Web!</h1>
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
+</div>
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://wallpapers.com/images/featured/ppm9iwqg6lgbu68o.jpg" class="d-block w-100" alt="...">
+      <img src="https://p4.wallpaperbetter.com/wallpaper/556/569/224/halloween-movie-2018-4k-wallpaper-preview.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://images.alphacoders.com/803/thumb-350-803546.jpg" class="d-block w-100" alt="...">
+      <img src="https://p4.wallpaperbetter.com/wallpaper/556/569/224/halloween-movie-2018-4k-wallpaper-preview.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://image.winudf.com/v2/image1/Y29tLmRhemhvbmdodWEud2FsbHBhcGFlci53SG9ycm9yX3NjcmVlbl8wXzE1NjcwMDY2MzhfMDg4/screen-0.jpg?fakeurl=1&type=.jpg" class="d-block w-100" alt="...">
+      <img src="https://p4.wallpaperbetter.com/wallpaper/556/569/224/halloween-movie-2018-4k-wallpaper-preview.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-</div>
+
