--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,13 +5,13 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://p4.wallpaperbetter.com/wallpaper/556/569/224/halloween-movie-2018-4k-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+      <img src="https://p4.wallpaperbetter.com/wallpaper/556/569/224/halloween-movie-2018-4k-wallpaper-preview.jpg" class="d-block w-100" alt="banner 1">
     </div>
     <div class="carousel-item">
-      <img src="https://p4.wallpaperbetter.com/wallpaper/556/569/224/halloween-movie-2018-4k-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+      <img src="https://p4.wallpaperbetter.com/wallpaper/862/905/224/freddy-krueger-nightmare-horror-house-creature-hd-wallpaper-preview.jpg" class="d-block w-100" alt="banner 2">
     </div>
     <div class="carousel-item">
-      <img src="https://p4.wallpaperbetter.com/wallpaper/556/569/224/halloween-movie-2018-4k-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+      <img src="https://i.pinimg.com/originals/56/29/b4/5629b46972629264dc64cfb8c712324f.jpg" class="d-block w-100" alt="banner 3">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
