--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="pieFooter">
-      <p id="leyendaFooter">© Copyright Willy S 2021- Todos los derechos reservados.</p>
+      <p id="leyendaFooter">© Copyright Willy S 2021- Todos los derechos se encuentran reservados.</p>
   </div>
 </footer>
 
