--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -19,15 +19,15 @@
     </div>
   </div>
   <div class="card" style="width: 16rem;">
-    <img src="https://miradetodo.co/wp-content/uploads/2021/09/tt9347730.jpg" class="card-img-top" alt="a4">
+    <img src="https://www.miradetodo.site/movies/static/img/w300/etYHukMKWSIBX0YkHarCEpOb0fE.jpg" class="card-img-top" alt="a4">
     <div class="card-body">
-      <p class="card-text">Candyman</p>
+      <p class="card-text">No respires 2</p>
     </div>
   </div>
   <div class="card" style="width: 16rem;">
-    <img src="https://miradetodo.co/wp-content/uploads/2021/02/tt9110170.jpg" class="card-img-top" alt="a5">
+    <img src="https://www.miradetodo.site/movies/static/img/w300/ghMQALCyytc6W0wlOlMIKiMSRKV.jpg" class="card-img-top" alt="a5">
     <div class="card-body">
-      <p class="card-text">Wrong Turn</p>
+      <p class="card-text">Expediente Warren</p>
     </div>
   </div>
   <div class="todaslasstarjetas">
