--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -4,14 +4,15 @@
 .card {
   display: inline-block;
   border: solid;
-  border-color: rgb(192, 78, 12);
-  padding: 2mm;
-  margin-left: 4mm;
+  border-color: rgb(199, 45, 7);
+  padding: 5mm;
+  margin: 10px;
   background-color: black;
+
 }
 
 .card-body {
-  background-color: rgb(204, 11, 11);
+  background-color: rgb(206, 9, 9);
 }
 
 .card-text {
@@ -25,3 +26,4 @@ h2 {
   color: gold;
   text-align: center;
 }
+
