--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,12 +1,13 @@
 .todaslastarjetas{
   background-color: black;
+
 }
 .card {
   display: inline-block;
   border: solid;
   border-color: rgb(199, 45, 7);
-  padding: 5mm;
-  margin: 10px;
+  padding: 0mm;
+  margin-left: 1.2cm;
   background-color: black;
 
 }
