--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,15 +1,14 @@
 .todaslastarjetas{
   background-color: black;
-
 }
 .card {
   display: inline-block;
   border: solid;
   border-color: rgb(199, 45, 7);
   padding: 0mm;
-  margin-left: 1.2cm;
   background-color: black;
-
+  margin-left: 0.5cm;
+  margin-bottom: 0.5cm;
 }
 
 .card-body {
