--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,5 @@
-<div class="todaslastarjetas">
+<div class="todaslasFotos">
+<div class="container text-center">
   <h2> Películas Novedades 2021</h2>
   <div class="card" style="width: 15rem;">
     <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt10665338.jpg" class="card-img-top" alt="a1">
@@ -62,3 +63,5 @@
         <p class="card-text">Day of the Dead</p>
       </div>
     </div>
+
+
