--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,64 +1,64 @@
 <div class="todaslasFotos">
 <div class="container text-center">
   <h2> Películas Novedades 2021</h2>
-  <div class="card" style="width: 15rem;">
-    <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt10665338.jpg" class="card-img-top" alt="a1">
+  <div class="card">
+    <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt10665338.jpg" class="card-img-top" alt="poster1">
     <div class="card-body">
-      <p class="card-text">Halloween Skills.</p>
+      <p class="card-text">Halloween Kills</p>
     </div>
   </div>
-  <div class="card" style="width: 15rem;">
-    <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt12060172.jpg" class="card-img-top" alt="a2">
+  <div class="card">
+    <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt12060172.jpg" class="card-img-top" alt="poster2">
     <div class="card-body">
       <p class="card-text">The mutation</p>
     </div>
   </div>
-  <div class="card" style="width: 15rem;">
-    <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt14076114.jpg" class="card-img-top" alt="a3">
+  <div class="card">
+    <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt14076114.jpg" class="card-img-top" alt="poster3">
     <div class="card-body">
       <p class="card-text">Amitivile Moon</p>
     </div>
   </div>
-  <div class="card" style="width: 15rem;">
-    <img src="https://www.miradetodo.site/movies/static/img/w300/etYHukMKWSIBX0YkHarCEpOb0fE.jpg" class="card-img-top" alt="a4">
+  <div class="card">
+    <img src="https://www.miradetodo.site/movies/static/img/w300/etYHukMKWSIBX0YkHarCEpOb0fE.jpg" class="card-img-top" alt="poster4">
     <div class="card-body">
       <p class="card-text">No respires 2</p>
     </div>
   </div>
-  <div class="card" style="width: 15rem;">
-    <img src="https://www.miradetodo.site/movies/static/img/w300/ghMQALCyytc6W0wlOlMIKiMSRKV.jpg" class="card-img-top" alt="a5">
+  <div class="card">
+    <img src="https://www.miradetodo.site/movies/static/img/w300/ghMQALCyytc6W0wlOlMIKiMSRKV.jpg" class="card-img-top" alt="poster5">
     <div class="card-body">
       <p class="card-text">Expediente Warren</p>
     </div>
   </div>
   <div class="todaslasstarjetas">
     <h2> Series Recomendadas</h2>
-    <div class="card" style="width: 15rem;">
-      <img src="https://miradetodo.co/wp-content/uploads/2018/09/tt6110648.jpg" class="card-img-top" alt="a6">
+    <div class="card">
+      <img src="https://miradetodo.co/wp-content/uploads/2018/09/tt6110648.jpg" class="card-img-top" alt="poster6">
       <div class="card-body">
         <p class="card-text">The purge</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://miradetodo.co/wp-content/uploads/2016/06/tt4229954.jpg" class="card-img-top" alt="a7">
+    <div class="card">
+      <img src="https://miradetodo.co/wp-content/uploads/2016/06/tt4229954.jpg" class="card-img-top" alt="poster7">
       <div class="card-body">
         <p class="card-text">Outcast</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://miradetodo.co/wp-content/uploads/2017/01/79b9aec092.jpg" class="card-img-top" alt="a8">
+    <div class="card">
+      <img src="https://miradetodo.co/wp-content/uploads/2017/01/79b9aec092.jpg" class="card-img-top" alt="poster8">
       <div class="card-body">
         <p class="card-text">Sleppy Hollow</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://miradetodo.co/wp-content/uploads/2019/04/tt8923854.jpg" class="card-img-top" alt="a9">
+    <div class="card">
+      <img src="https://miradetodo.co/wp-content/uploads/2019/04/tt8923854.jpg" class="card-img-top" alt="poster9">
       <div class="card-body">
         <p class="card-text">Black Summer</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt12992550.jpg" class="card-img-top" alt="a10">
+    <div class="card">
+      <img src="https://miradetodo.co/wp-content/uploads/2021/10/tt12992550.jpg" class="card-img-top" alt="poster10">
       <div class="card-body">
         <p class="card-text">Day of the Dead</p>
       </div>
