--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -63,5 +63,37 @@
         <p class="card-text">Day of the Dead</p>
       </div>
     </div>
+    <div class="todaslasstarjetas">
+      <h2> Suspenso y Miedo</h2>
+      <div class="card">
+        <img src="https://miradetodo.co/wp-content/uploads/2021/08/tt10691162.jpg" class="card-img-top" alt="poster6">
+        <div class="card-body">
+          <p class="card-text">Mudanza Mortal</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://miradetodo.co/wp-content/uploads/2021/11/tt15655276.jpg" class="card-img-top" alt="poster7">
+        <div class="card-body">
+          <p class="card-text">Yara</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://miradetodo.co/wp-content/uploads/2021/01/tt5867314.jpg" class="card-img-top" alt="poster8">
+        <div class="card-body">
+          <p class="card-text">Empty Man</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://miradetodo.co/wp-content/uploads/2021/07/tt7397098.jpg" class="card-img-top" alt="poster9">
+        <div class="card-body">
+          <p class="card-text">Initiaton</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://miradetodo.co/wp-content/uploads/2017/10/tt6214928.jpg" class="card-img-top" alt="poster10">
+        <div class="card-body">
+          <p class="card-text">1922</p>
+        </div>
+      </div>
 
 
